tests/neg/i7750.scala
package object A extends runtime.A {
    implicit def a( : ) = 1() // error // error // error
}